--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "prestart": "npm run build",
-    "start": "node src/index.js",
-    "examples": "node examples-server.js",
-    "test:browser": "node_modules/.bin/karma start",
-    "test:server": "node_modules/.bin/mocha test/components/* --compilers js:babel-register --watch"
+    "prestart": "SET NODE_PATH=src && SET BABEL_ENV=browser && webpack",
+    "start": "npm-run-all -p start:*",
+    "start:client": "SET BABEL_ENV=browser && webpack --watch",
+    "start:server": "SET BABEL_ENV=NODE && .\\node_modules\\.bin\\nodemon --exec babel-node ./src/server"
   },
   "author": "",
   "license": "ISC",
@@ -17,13 +15,13 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-dynamic-import-node": "^2.0.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-react-jsx-source": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.22.0",
-    "babel-preset-env": "^1.6.0",
     "babel-register": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "classnames": "^2.2.6",
@@ -31,6 +29,8 @@
     "history": "4.7.2",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "4.17.4",
+    "nodemon": "^1.18.3",
+    "npm-run-all": "^4.1.3",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
@@ -48,17 +48,19 @@
     "serialize-javascript": "^1.5.0"
   },
   "devDependencies": {
+    "assets-webpack-plugin": "^3.8.4",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-react-jsx-source": "^6.22.0",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.22.0",
-    "babel-preset-env": "^1.6.0",
     "babel-register": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "chai": "^4.1.2",
+    "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
     "eslint-config-airbnb": "^17.0.0",
@@ -66,11 +68,12 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-mocha": "^5.0.0",
     "eslint-plugin-react": "^7.10.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "mocha": "^5.2.0",
     "sinon": "^6.0.1",
     "sinon-chai": "^3.2.0",
     "style-loader": "^0.21.0",
-    "webpack": "^4.14.0",
+    "webpack": "^3.7.1",
     "webpack-cli": "^3.0.8"
   }
 }
