--- a/.babelrc
+++ b/.babelrc
@@ -14,7 +14,6 @@
     "stage-0"
   ],
   "plugins": [
-    "transform-runtime",
     "transform-decorators-legacy",
     "react-loadable/babel",
     "react-hot-loader/babel"
@@ -22,7 +21,7 @@
   "env": {
     "development": {
       "plugins": [
-        "transform-react-jsx-source"
+        "transform-regenerator"
       ]
     }
   }
