--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "prestart": "SET NODE_PATH=src && SET BABEL_ENV=browser && webpack",
     "start": "npm-run-all -p start:*",
     "start:client": "SET BABEL_ENV=browser && webpack --watch",
-    "start:server": "SET BABEL_ENV=NODE && .\\node_modules\\.bin\\nodemon --exec babel-node ./src/server"
+    "start:server": "SET BABEL_ENV=NODE && .\\node_modules\\.bin\\nodemon --exec babel-node ./src/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,15 +16,10 @@
     "babel-loader": "^7.1.4",
     "babel-plugin-dynamic-import-node": "^2.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-react-jsx-source": "^6.22.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.22.0",
     "babel-register": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "classnames": "^2.2.6",
+    "copy-webpack-plugin": "^4.5.2",
     "express": "^4.16.3",
     "history": "4.7.2",
     "isomorphic-fetch": "^2.2.1",
@@ -48,19 +43,17 @@
     "serialize-javascript": "^1.5.0"
   },
   "devDependencies": {
-    "assets-webpack-plugin": "^3.8.4",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-react-jsx-source": "^6.22.0",
+    "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.22.0",
     "babel-register": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "chai": "^4.1.2",
-    "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
     "eslint-config-airbnb": "^17.0.0",
@@ -68,12 +61,11 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-mocha": "^5.0.0",
     "eslint-plugin-react": "^7.10.0",
-    "extract-text-webpack-plugin": "^3.0.2",
     "mocha": "^5.2.0",
     "sinon": "^6.0.1",
     "sinon-chai": "^3.2.0",
     "style-loader": "^0.21.0",
-    "webpack": "^3.7.1",
+    "webpack": "^4.14.0",
     "webpack-cli": "^3.0.8"
   }
 }
