--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@trendmicro/react-sidenav": "^0.4.5",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-dynamic-import-node": "^2.0.0",
@@ -24,13 +25,14 @@
     "express": "^4.16.3",
     "history": "4.7.2",
     "isomorphic-fetch": "^2.2.1",
-    "lodash": "4.17.4",
+    "lodash": "^4.17.5",
     "nodemon": "^1.18.3",
     "npm-run-all": "^4.1.3",
     "prop-types": "^15.6.2",
-    "react": "^16.4.1",
+    "react": "^16.4.2",
     "react-dom": "^16.4.1",
     "react-hot-loader": "^4.3.3",
+    "react-icons-kit": "^1.1.7",
     "react-loadable": "^5.3.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
